--- a/css/estilos.css
+++ b/css/estilos.css
@@ -254,3 +254,33 @@ div.right{
 		margin-right: 15%;
 	}
 }
+
+div.contenido.existentes{
+	text-align: center;
+	margin-top: 10px;
+	margin: 0 auto;
+	padding: 20px;
+	background-color: #e1e1e1;
+}
+div.existentes table{
+	margin: 0 auto;
+}
+div.existentes  table {
+padding: 80px;
+  width: 100%;
+  font-family: geneva;
+  font-size: 16px;
+  border-collapse: collapse;
+}
+div.existentes table th{
+	font-size: 23px;
+	margin-bottom: 7px;
+}
+div.existentes table tr td{
+	padding: 10px 0;
+	font-size: 20px;
+	line-height: 20px;
+}
+div.existentes table tbody tr:nth-child(even) {
+  background-color: rgb(147, 149, 153);
+}
