--- a/css/estilos.css
+++ b/css/estilos.css
@@ -479,3 +479,17 @@ div.volver{
 .icons {
 	color: black;
 }
+
+@media only screen and (min-width: 768px){
+	.agregar-boleto{
+	margin: 20px 45% 0 auto;
+	display: block;
+}
+}
+footer div{
+	margin-top: 5vh;
+	text-align: center;
+}
+footer div a{
+	color:black;
+}
